--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QL'
 - !lcsh 'Insects'
+- GITenberg
 title: "The Life of an Insect\r\nbeing a history of the changes of insects from the\
   \ egg to the perfect being."
 url: http://www.gutenberg.org/ebooks/45369
